CSV Import: Show error messages if import fails.

--- a/app/views/account/send.html
+++ b/app/views/account/send.html
@@ -125,7 +125,7 @@
                     </button>
                     <ul class="dropdown-menu">
                       <li>
-                        <a href="" ng-click="importCsv()">
+                        <a href="" ng-click="promptCsv()">
                           <span class="glyphicon glyphicon-import"></span> Import from CSV
                         </a>
                       </li>
