Wipe: Ask if user wants to forget device after wipe.
Device: Forget and Disconnect modal reworked.

Modals: Default modal is narrower, use size = 'lg' to make a modal the default Bootstrap size.

--- a/app/views/device/load.html
+++ b/app/views/device/load.html
@@ -4,7 +4,8 @@
     <strong>Please connect your device</strong> to access this section.
   </div>
 
-  <div class="alert alert-warning">
+  <div class="alert alert-warning alert-withicon alert-lg">
+    <span class="glyphicon glyphicon-warning-sign alert-icon"></span>
     <p>This is an advanced interface intended for EXPERT use only!</p>
     <p>If you are a common user and want to setup or recover your TREZOR device,
        please continue to <a href="#/device/{{device.id}}/setup">TREZOR Setup</a>.</p>
