--- a/app/views/modal/qr.html
+++ b/app/views/modal/qr.html
@@ -7,6 +7,6 @@
   <qr-scan ng-model="qr.address"></qr-scan>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-default"
+  <button type="button" class="btn btn-default pull-left"
       ng-click="$dismiss()">Cancel</button>
 </div>
