--- a/app/views/device/wipe.html
+++ b/app/views/device/wipe.html
@@ -7,11 +7,12 @@
   <div ng-controller="DeviceWipeCtrl">
 
     <fieldset ng-disabled="!device.isConnected()">
-      <div class="alert alert-danger alert-withicon">
+      <div class="alert alert-danger alert-withicon alert-lg">
         <span class="glyphicon glyphicon-warning-sign alert-icon"></span>
         <h4>Do you really want to wipe the device?</h4>
-        <p>All data from the device will be lost! You can recover your funds using recovery seed.</p>
-        <p>
+        <p>All data from the device will be lost! You can recover your funds
+        using recovery seed.<br></p>
+        <p class="alert-buttons">
           <button class="btn btn-danger"
                   ng-click="wipeDevice()">Wipe</button>
           <a href="#/device/{{device.id}}" class="btn btn-link">Cancel</a>
