--- a/app/views/modal/disconnect.html
+++ b/app/views/modal/disconnect.html
@@ -1,17 +1,14 @@
 <div class="modal-header">
-  <!--
   <button type="button" class="close" title="Cancel"
-    ng-click="$dismiss()">&times;</button>
-  -->
-  <h4 class="modal-title">Forget device?</h4>
+          ng-if="!disableCancel"
+          ng-click="$dismiss()">&times;</button>
+  <h4 class="modal-title">Disconnect your Trezor now</h4>
 </div>
 <div class="modal-body">
-  <p>Would you like myTREZOR to forget your device or to remember it, so that
-  it is still visible even while disconnected?</p>
-  <p class="text-muted">If you choose to remember the device, we will not ask
-  you this question next time you disconnect the device.</p>
+  myTREZOR will forget your Trezor right after you disconnect it.
 </div>
-<div class="modal-footer">
-  <button type="button" class="btn btn-default" ng-click="$dismiss()">Remember</button>
-  <button type="button" class="btn btn-primary" ng-click="$close()">Forget</button>
+<div class="modal-footer"
+     ng-if="!disableCancel">
+  <button type="button" class="btn btn-default pull-left"
+          ng-click="$dismiss()">Cancel</button>
 </div>
