Import: Warning icon added

--- a/app/views/import.html
+++ b/app/views/import.html
@@ -5,7 +5,8 @@
     <fieldset>
       <form name="form" class="devimport col-md-6">
 
-        <div class="alert alert-warning">
+        <div class="alert alert-warning alert-withicon alert-lg">
+          <span class="glyphicon glyphicon-warning-sign alert-icon"></span>
           <p>This is an advanced interface intended for developer use only!</p>
           <p>Never use this process unless you really know what you are doing!</p>
         </div>
