--- a/app/views/account/sign.html
+++ b/app/views/account/sign.html
@@ -80,6 +80,7 @@
                 <label for="verify-address">Address</label>
                 <input type="text" class="form-control"
                        name="address" id="verify-address"
+                       required
                        ng-model="verify.address"
                        typeahead="
                        address.address as address.label
