--- a/app/views/account/sign.html
+++ b/app/views/account/sign.html
@@ -3,18 +3,18 @@
 
     <ng-include src="'views/account/nav.html'"></ng-include>
 
-    <div class="tab-content"
+    <div class="tab-content sign"
          ng-controller="AccountSignCtrl">
 
       <div class="row">
         <div class="col-md-6">
           <form name="form"
-                ng-submit="sign()">
+                ng-submit="signSaveAddress() && sign()">
             <fieldset>
               <legend>Sign message</legend>
 
               <div class="alert"
-                   ng-show="isAlertVisible('sign')"
+                   ng-show="hasErrorMessage('sign')"
                    ng-class="getAlertClass('sign')">
                 {{sign.res.message}}
               </div>
@@ -27,16 +27,18 @@
                           ng-change="resetSign()"></textarea>
               </div>
 
-              <div class="form-group">
+              <div class="form-group has-feedback"
+                  ng-class="getSignAddressClass()">
                 <label for="sign-address">Address</label>
                 <input type="text" class="form-control"
                        name="address" id="sign-address"
                        ng-model="sign.address"
-                       typeahead="
-                       address.address as address.label
-                       for address in suggestAddressesWithCache() | filter:$viewValue"
-                       ng-change="resetSign()"
-                       ></textarea>
+                       ng-change="resetSign(); signSaveAddress()"
+                       >
+                <span class="glyphicon glyphicon-ok form-control-feedback"
+                  aria-hidden="true"></span>
+                <span class="glyphicon glyphicon-remove form-control-feedback"
+                  aria-hidden="true"></span>
               </div>
 
               <div class="form-group">
@@ -47,7 +49,8 @@
                           ng-model="sign.signature"></textarea>
               </div>
 
-              <button type="submit" class="btn btn-primary">
+              <button type="submit" class="btn btn-primary"
+                  ng-disabled="!isSignValid()">
                 Sign
               </button>
             </fieldset>
@@ -61,7 +64,7 @@
               <legend>Verify message</legend>
 
               <div class="alert"
-                   ng-show="isAlertVisible('verify')"
+                   ng-show="hasErrorMessage('verify')"
                    ng-class="getAlertClass('verify')">
                 {{verify.res.message}}
               </div>
@@ -82,11 +85,8 @@
                        name="address" id="verify-address"
                        required
                        ng-model="verify.address"
-                       typeahead="
-                       address.address as address.label
-                       for address in suggestAddressesWithCache() | filter:$viewValue"
                        ng-change="resetVerify()"
-                       ></textarea>
+                       >
               </div>
 
               <div class="form-group">
