--- a/app/views/account/receive.html
+++ b/app/views/account/receive.html
@@ -36,7 +36,7 @@
           <!-- Used addresses -->
           <div class="list-group address-list address-list-used"
                ng-show="usedAddresses.length">
-            <a class="list-group-item"
+            <a class="list-group-item address-list-item"
                ng-repeat="address in usedAddresses"
                ng-class="{ active: activeAddress.address === address.address }"
                ng-click="activate(address)">
@@ -44,7 +44,7 @@
                     >/{{address.path[address.path.length-1]}}</span>
               <span class="address-list-address">{{address.address}}</span>
               <small class="address-list-balance text-success pull-right"
-                >({{address.balance | amount}} {{account.coin.coin_shortcut}})</small>
+                     >({{address.balance | amount}} {{account.coin.coin_shortcut}})</small>
 
               <!-- Address verification -->
               <span class="address-verify"
@@ -62,7 +62,7 @@
                   </button>
                 </div>
                 <div ng-if="!device.isConnected()"
-                     tooltip="Connect your device to verify this address"
+                     tooltip="Connect your device to check this address"
                      tooltip-placement="bottom">
                   <button class="btn btn-link btn-verifyaddress" disabled>
                     <span class="glyphicon glyphicon-eye-open"></span>
@@ -76,7 +76,7 @@
           <!-- Fresh addresses -->
           <div class="list-group address-list">
             <div ng-repeat="address in addresses">
-              <a class="list-group-item"
+              <a class="list-group-item address-list-item"
                  ng-class="{
                  invalid: address.invalid,
                  active: activeAddress.address === address.address
