Renaming 'forget' to 'forget.disconnected', adding some more info

--- a/app/views/modal/forget.disconnected.html
+++ b/app/views/modal/forget.disconnected.html
@@ -1,3 +1,4 @@
+<!---this modal is displayed when device is disconnected for the first time-->
 <div class="modal-header">
   <h4 class="modal-title">Forget device?</h4>
 </div>
@@ -6,6 +7,9 @@
   it is still visible even while disconnected?</p>
   <p class="text-muted">If you choose to remember the device, we will not ask
   you this question next time you disconnect the device.</p>
+  <p class="text-muted">Forgetting only removes the device from the list 
+  on the left, your bitcoins are still safe and you can access them by 
+  reconnecting your Trezor again.</p>
 </div>
 <div class="modal-footer">
   <button type="button" class="btn btn-default" ng-click="$dismiss()">Remember</button>
