changing trash icon to fire (so removing will be trash)

--- a/app/views/device/index.html
+++ b/app/views/device/index.html
@@ -80,7 +80,7 @@
           <div class="col-md-8">
             <a class="btn btn-danger"
                ng-href="#/device/{{device.id}}/wipe">
-              <span class="glyphicon glyphicon-trash"></span>
+              <span class="glyphicon glyphicon-fire"></span>
               Wipe device
             </a>
           </div>
