--- a/app/views/modal/forget.wipe.html
+++ b/app/views/modal/forget.wipe.html
@@ -1,3 +1,4 @@
+<!--This modal is displayed after wipe is done (and user will probably want to wipe the device)-->
 <div class="modal-header">
   <h4 class="modal-title">Wipe finished</h4>
 </div>
