--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -7,15 +7,13 @@
        ng-class="{ active: isActive('/device/{{device.id}}$') }">
       <h4>
         {{device.label()}}
-        <span class="pull-right dev-status-icon icon-loading" title="Loading..."
-              ng-show="device.isLoading()"></span>
       </h4>
 
       <small class="dev-status">
         <span class="dev-status-{{device.status()}}"
               ng-switch="device.status()">
           <span ng-switch-when="loading">
-            <span class="glyphicon glyphicon-cog"></span>
+            <span class="glyphicon glyphicon-refresh rotate-animation"></span>
             {{device.statusLabel() || 'Loading'}}&hellip;
           </span>
           <span ng-switch-when="connected">
@@ -36,7 +34,11 @@
        tooltip-placement="bottom"
        tooltip-append-to-body="true"
        tooltip-trigger="mouseenter"
-       ng-click="forget(device)">&times;</a>
+       ng-click="forget(device)"
+       ng-if="!(device.isLoading())"
+       >
+      <span class="glyphicon glyphicon-trash" aria-hidden="true"></span>
+       </a>
 
     <div class="dev-slowdiscovery tooltip in top"
          ng-show="device.discoveryIsSlow()">
@@ -62,16 +64,13 @@
     <ul class="nav nav-devices-accounts">
       <!-- Account -->
       <li ng-repeat="account in device.accounts"
-          ng-class="{ disabled: account.balance == null }">
+          ng-class="{ disabled: account.isLoading() }">
         <a ng-href="{{ accountLink(device, account)}}"
            ng-class="{ active: isActive('/device/{{device.id}}/account/{{account.id}}') }"
           >{{account.label()}}
           <small class="dev-acc-info">
-            <span ng-if="account.balance != null">
+            <span ng-if="!(account.isLoading())">
               ({{account.balance | amount}} {{account.coin.coin_shortcut}})
-            </span>
-            <span ng-if="account.balance == null">
-              <span class="icon-loading" title="Loading&hellip;"></span>
             </span>
             <span ng-if="account.isOffline()"
                   class="pull-right text-danger">
