--- a/app/views/account/receive.html
+++ b/app/views/account/receive.html
@@ -61,15 +61,18 @@
               <!-- Address verification -->
               <span class="address-verify"
                     ng-if="
-                    device.supports('addressVerification') &&
-                    activeAddress.address === address.address
-                    ">
+                    device.supports('addressVerification')
+                    "
+                    ng-class="{nonactive: (activeAddress.address !== address.address)}"
+                    >
                 <div ng-if="device.isConnected()"
                      ng-hide="address.verification">
                   <button class="btn btn-link btn-verifyaddress"
-                          ng-click="verify()"
+                          ng-click="verify(address)"
                           tooltip="Show on TREZOR"
-                          tooltip-placement="bottom">
+                          tooltip-placement="bottom"
+                          tooltip-append-to-body="1"  
+                        >
                     <span class="glyphicon glyphicon-eye-open"></span>
                   </button>
                 </div>
@@ -102,15 +105,18 @@
                 <!-- Address verification -->
                 <span class="address-verify"
                       ng-if="
-                      device.supports('addressVerification') &&
-                      activeAddress.address === address.address
-                      ">
+                      device.supports('addressVerification') 
+                      "
+                    ng-class="{nonactive: (activeAddress.address !== address.address)}"
+                      >
                   <div ng-if="device.isConnected()"
                        ng-hide="address.verification">
                     <button class="btn btn-link btn-verifyaddress"
-                            ng-click="verify()"
+                            ng-click="verify(address)"
                             tooltip="Show on TREZOR"
-                            tooltip-placement="bottom">
+                            tooltip-placement="bottom"
+                            tooltip-append-to-body="1"  
+                            >
                       <span class="glyphicon glyphicon-eye-open"></span>
                     </button>
                   </div>
